--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
 								</div>
 							</div>
 						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Events and Efficency</h2>
+									<p>Check out some of our recent talks, events, and learn about Split Learning’s computational and communication efficiency on clients.</p>
+									<ul class="actions">
+										<li><a href="events.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 					</section>
 
 				<!--  Videos -->
