--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 							<li><a href="#intro">Home</a></li>
 							<li><a href="#one">Programs</a></li>
 							<li><a href="#videos">Videos</a></li>
-							<li><a href="#team">Team</a></li>
 							<li><a href="#faq">FAQ</a></li>
+              <li><a href="#team">Team</a></li>
 							<li><a href="#references">References</a></li>
 							<li><a href="#contact">Contact</a></li>
 							<li><a href="blog.html">Blog</a></li>
@@ -111,8 +111,8 @@
 						</div>
 					</section>
 				
-					<!-- Team -->
-					<section id="team" class="wrapper style4 fade-up">
+					<!-- FAQ -->
+					<section id="faq" class="wrapper style4 fade-up">
 						<div class="inner">
 							<h2>Frequently Asked Questions</h2>
 							<blockquote>How does split learning work and what is new in our approach?</blockquote>
@@ -127,8 +127,8 @@
 						</div>
 					</section>
 				
-				<!-- FAQ -->
-				<section id="faq" class="wrapper style2-alt fade-up">
+				<!-- TEAM -->
+				<section id="team" class="wrapper style2-alt fade-up">
 					<div class="inner">
 						<h2>Team</h2>
 						<p><u>Main Collaborators:</u>
