--- a/inference.html
+++ b/inference.html
@@ -34,20 +34,20 @@
                             <h1 class="major">Split Learning and Inference</h1>
                             <span class="image fit"><a href="https://www.slideshare.net/cameraculture/split-learning-versus-federated-learning-for-data-transparent-ml"><img src="images/splitSlides.png" alt="" /></a></span> <!-- if there is an image, change it or it can be deleted-->
                             <p>Split learning removes barriers for collaboration in a whole range of sectors including healthcare, finance, security, logistics, governance, operations and manufacturing.</p>
-                            <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+                            <div class="col-4"><span class="image fit"><img src="images/inference2.png" style="width:75%; margin:auto;" alt="" /></span></div>
                             <p>For example, a split learning configuration as shown below allows for resource-constrained local hospitals with smaller individual datasets to collaborate and build a machine learning model that offers superior healthcare diagnostics, without sharing any raw data across each other as necessitated by trust, regulation and privacy.</p>
-                            <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+                            <div class="col-4"><span class="image fit"><img src="images/inference3.png" style="width:75%; margin:auto;" alt="" /></span></div>
                             <p><span style="font-weight: bold;">Landscape of related work:</span> As shown below, split learning ideally fills the gap for being able to perform advanced AI tasks like training machine learning models in distributed settings with a substantial level of data protection.</p>
-                            <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+                            <div class="col-4"><span class="image fit"><img src="images/inference4.png" style="width:75%; margin:auto;" alt="" /></span></div>
                             <h1 class="major">SplitNN Architectures, Leakage Prevention and Diverse Applications</h1>
                             <div class="box alt">
                                 <div class="row gtr-uniform">
-                                    <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                                    <div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-                                    <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-                                    <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-                                    <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                                    <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+                                    <div class="col-4"><span class="image fit" style="height: 100%"><img src="images/splitnn1.png" style="height: 100%" alt="" /></span></div>
+                                    <div class="col-4"><span class="image fit" style="height: 100%"><img src="images/splitnn2.png" style="height: 100%" alt="" /></span></div>
+                                    <div class="col-4"><span class="image fit" style="height: 100%"><img src="images/splitnn3.png" style="height: 100%" alt="" /></span></div>
+                                    <div class="col-4"><span class="image fit" style="height: 100%"><img src="images/splitnn4.png" style="height: 100%" alt="" /></span></div>
+                                    <div class="col-4"><span class="image fit" style="height: 100%"><img src="images/splitnn5.png" style="height: 100%" alt="" /></span></div>
+                                    <div class="col-4"><span class="image fit" style="height: 100%"><img src="images/splitnn6.png" style="height: 100%" alt="" /></span></div>
                                 </div>
                             </div>
                         </div>
