--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>PathCheck Foundation</h2>
-									<p>A global community-led movement PathCheck develops free, open-source, privacy-by-design tools for residents, public health officials, and larger communities to flatten the curve of COVID-19, reduce fear, and prevent a surveillance-state response to the pandemic.</p>
+									<h2>SafePaths</h2>
+									<p>A global community-led movement SafePaths develops free, open-source, privacy-by-design tools for residents, public health officials, and larger communities to flatten the curve of COVID-19, reduce fear, and prevent a surveillance-state response to the pandemic.</p>
 									<ul class="actions">
-										<li><a href="pathcheck.html" class="button">Learn more</a></li>
+										<li><a href="https://pathcheck.org" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
