--- a/events.html
+++ b/events.html
@@ -19,7 +19,7 @@
 				<a href="index.html" class="title">MIT Media Lab's Split Learning Project</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><a href="blog.html">All Posts</a></li>
 					</ul>
 				</nav>
