--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting to split learning blog</title>
+    <title>Redirecting to Split Learning blog</title>
 </head>
 <body>
-    <center><p style="font-size: 20px;">Redirecting to split learning blog...</p></center>
+    <center><p style="font-size: 20px;">Redirecting you to Split Learning's blog...</p></center>
     <script>
         window.open('https://minor.github.io/blog/', "_self");
     </script>
