--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<li><a href="#one">Programs</a></li>
 							<li><a href="#videos">Videos</a></li>
 							<li><a href="#faq">FAQ</a></li>
-              <li><a href="#team">Team</a></li>
+              				<li><a href="#team">Team</a></li>
 							<li><a href="#references">References</a></li>
 							<li><a href="#contact">Contact</a></li>
 							<li><a href="blog.html">Blog</a></li>
@@ -101,12 +101,11 @@
 					<section id="videos" class="wrapper style4-alt fade-up">
 						<div class="inner">
 							<h2>Videos: Privacy Aware AI, Split Learning at World Economic Forum and Niti Aayog</h2>
-							<p>1. <a href="">Health Grid: Blockchain-based Data Marketplace | Ramesh Raskar | WEF 2019</a>
-							<br>2. <a href="">AI for All | Speedtalk | Ramesh Raskar</a>
-							<br>3. <a href="">Ramesh Raskar | 2019 Doctoral Hooding Ceremony Keynote Address | UNC-Chapel Hill</a>
-							<br>4. <a href="">God's Eye View: Will global AI empower us or destroy us? | Ramesh Raskar | TEDxBeaconStreet</a>
-							<br>5. <a href="">A Resource Efficient Distributed Deep Learning Method without Sensitive Data Sharing | MIT</a>
-							</p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/GiGlHuWOwME" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/7jWXaABY81I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/hHV2WR7nCQk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/x9TCYuMUnco" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/4PdBM76D5JY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							<p><span style="font-weight: bold;">Key technical idea:</span> In the simplest of configurations of split learning, each client (for example, radiology center) trains a partial deep network up to a specific layer known as the cut layer. The outputs at the cut layer are sent to another entity (server/another client) which completes the rest of the training without looking at raw data from any client that holds the raw data. This completes a round of forward propagation without sharing raw data. The gradients are now back propagated again from its last layer until the cut layer in a similar fashion. The gradients at the cut layer (and only these gradients) are sent back to radiology client centers. The rest of back propagation is now completed at the radiology client centers. This process is continued until the distributed split learning network is trained without looking at each others raw data.</p>
 						</div>
 					</section>
