add workshop page

--- a/events.html
+++ b/events.html
@@ -33,6 +33,10 @@
 						<div class="inner">
 							<h1 class="major">Events</h1>
 
+							<h3>Workshop on Split Learning for Distributed Machine Learning (SLDML’21)</h3>
+							<p>March 4-5, 2021 10:00 AM EST onwards (MIT, Virtual)<br>
+							Find more information <a href="workshop.html">here</a>.</p>
+
                             <h3>CVPR 2019 Half-Day Tutorial on “Distributed Private Machine Learning for Computer Vision: Federated Learning, Split Learning and Beyond”</h3>
                             <p>We gave a half-day tutorial at CVPR 2019: On Distributed Private Machine Learning for Computer Vision: Federated Learning, Split Learning and Beyond by <u><span style="font-weight: bold;">Brendan McMahan</span></u> (Google, USA), <u><span style="font-weight: bold;">Jakub Konečný</span></u> (Google, USA), Otkrist Gupta (LendBuzz), <u><span style="font-weight: bold;">Ramesh Raskar</span></u> (MIT Media Lab, Cambridge, Massachusetts, USA),<u><span style="font-weight: bold;">Hassan Takabi</span></u> (University of North Texas, Texas, USA) and <u><span style="font-weight: bold;">Praneeth Vepakomma</span></u> (MIT Media Lab, Cambridge, Massachusetts, USA).
                             <br> Find more information at this <a href="https://nopeekcvpr.github.io/">link</a>.</p>
