--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
 					</nav>
 				</div>
 			</section>
-
 		<!-- Wrapper -->
 			<div id="wrapper">
+				<div class="alert">
+					<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+					<strong>Upcoming Event!</strong> Workshop on Split Learning for Distributed Machine Learning (SLDML’21)
+				  </div>
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
