--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 							<li><a href="#references">References</a></li>
 							<li><a href="#contact">Contact</a></li>
 							<li><a href="blog.html">Blog</a></li>
+							<li><a href="workshop.html">Workshop</a></li>
 						</ul>
 					</nav>
 				</div>
