--- a/index.html
+++ b/index.html
@@ -189,8 +189,10 @@
 						<br>2. Designing neural network architecture using reinforcement learning, Bowen Baker, Otkrist Gupta, Nikhil Naik & Ramesh Raskar, In: conference paper at ICLR, (2017) <a href="https://arxiv.org/pdf/1611.02167.pdf">(PDF)</a>
 						<br>
 
-						<br><u>Differentially Private Data Structures:</u>
-						<br>1. DAMS: Meta-estimation of private sketch data structures for differentially private COVID-19 contact tracing, Praneeth Vepakomma, Subha Nawer Pushpita, Ramesh Raskar, PPML-NeurIPS 2020, (2020) <a href="https://github.com/PrivateKit/PrivacyDocuments/blob/master/DAMS_Meta-estimation_of_private_sketch_data_structures_for_differentially_private_contact_tracing.pdf">(PDF)</a>
+						<br><u>Differential Privacy Papers:</u>
+						<br>1. Differentially Private Supervised Manifold Learning with Applications like Private Image Retrieval, Praneeth Vepakomma, Julia Balla, Ramesh Raskar, (2021) <a href="https://arxiv.org/pdf/2102.10802.pdf">(PDF)</a>
+             <br>2. DAMS: Meta-estimation of private sketch data structures for differentially private COVID-19 contact tracing, Praneeth Vepakomma, Subha Nawer Pushpita, Ramesh Raskar, PPML-NeurIPS 2020, (2020) <a href="https://github.com/PrivateKit/PrivacyDocuments/blob/master/DAMS_Meta-estimation_of_private_sketch_data_structures_for_differentially_private_contact_tracing.pdf">(PDF)</a>
+              <br>
 						</p>
 					</div>
 				</section>
