update workshop page

--- a/workshop.html
+++ b/workshop.html
@@ -39,7 +39,10 @@
 							<h1 class="major">Workshop on Split Learning for Distributed Machine Learning (SLDML’21)</h1>
 
 							<h3>March 4-5, 2021 10:00 AM EST onwards (MIT, Virtual)</h3>
+							<h3>Join <a href="http://pandemic.mit.edu/slack">Slack Channel</a> on #split_learning for discussion</h3>
 							<p><a href="https://forms.gle/tmKsoVdJR43rbafF8">Workshop Registration Form</a></p>
+							<h4> March 4 <a href="https://mit.zoom.us/s/93598566254">Zoom Link</a> </h4>
+							<h4> March 5 <a href="https://mit.zoom.us/s/98016431351">Zoom Link</a> </h4>
 							<center><img src="images/inference2.png"/></center>
 
                             <h3>Overview</h3>
