--- a/workshop.html
+++ b/workshop.html
@@ -41,8 +41,8 @@
 							<h3>March 4-5, 2021 10:00 AM EST onwards (MIT, Virtual)</h3>
 							<h3>Join Slack channel on <a href="http://pandemic.mit.edu/slack">#split_learning</a> for discussion</h3>
 							<p><a href="https://forms.gle/tmKsoVdJR43rbafF8">Workshop Registration Form</a></p>
-							<h4> March 4 <a href="https://mit.zoom.us/s/93598566254">Zoom Link</a> </h4>
-							<h4> March 5 <a href="https://mit.zoom.us/s/98016431351">Zoom Link</a> </h4>
+							<h4> March 4 <a href="https://mit.zoom.us/s/93598566254">Zoom Link</a>, <a href="https://youtu.be/VPL6ELWdJbg">Livestream Link</a> </h4>
+							<h4> March 5 <a href="https://mit.zoom.us/s/98016431351">Zoom Link</a>, <a href="https://youtu.be/bxn3-BtPNjw">Livestream Link</a> </h4>
 							<center><img src="images/inference2.png"/></center>
 
                             <h3>Overview</h3>
