--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div id="wrapper">
 				<div class="alert">
 					<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-					<strong>Upcoming Event!</strong> Workshop on Split Learning for Distributed Machine Learning (SLDML’21)
+					<a href="workshop.html"><strong>Upcoming Event!</strong> Workshop on Split Learning for Distributed Machine Learning (SLDML’21)</a>
 				  </div>
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
