--- a/workshop.html
+++ b/workshop.html
@@ -41,7 +41,7 @@
 							<h3>March 4-5, 2021 10:00 AM EST onwards (MIT, Virtual)</h3>
 							<h3>Join Slack channel on <u><a href="http://pandemic.mit.edu/slack">#split_learning</a></u> for discussion</h3>
 							<p><a href="https://forms.gle/tmKsoVdJR43rbafF8">Workshop Registration Form</a></p>
-							<h4><a href="https://youtu.be/bxn3-BtPNjw">Livestream Link</a> </h4>
+							<h4><a href="https://youtu.be/VPL6ELWdJbg">Livestream Link</a> </h4>
 							<center><img src="images/inference2.png"/></center>
 
                             <h3>Overview</h3>
