--- a/workshop.html
+++ b/workshop.html
@@ -41,7 +41,7 @@
 							<h3>March 4-5, 2021 10:00 AM EST onwards (MIT, Virtual)</h3>
 							<h3>Join Slack channel on <u><a href="http://pandemic.mit.edu/slack">#split_learning</a></u> for discussion</h3>
 							<p><a href="https://forms.gle/tmKsoVdJR43rbafF8">Workshop Registration Form</a></p>
-							<h4><a href="https://youtu.be/VPL6ELWdJbg">Livestream Link</a> </h4>
+							<h4><a href="https://youtu.be/bxn3-BtPNjw">Livestream Link</a> </h4>
 							<center><img src="images/inference2.png"/></center>
 
                             <h3>Overview</h3>
@@ -182,8 +182,8 @@
 								   </tr>
 								   <tr class="rtr">
 									<td class="rtd">11:15 - 11:30 AM</td>
-									<td class="rtd">Splintering: A New Primitive for Distributed Computation</td>
-									<td class="rtd">Praneeth Vepakomma, Julia Balla, Susovan Pal, Ramesh Raskar (MIT)</td>
+									<td class="rtd">Break</td>
+									<td class="rtd"></td>
 								   </tr>
 								   <tr class="rtr">
 									<td class="rtd">11:30 - 11:45 AM</td>
@@ -238,7 +238,12 @@
 								   <tr class="rtr">
 									<td class="rtd">3:15 - 3:30 PM</td>
 									<td class="rtd">Split Learning on FPGAs</td>
-									<td class="rtd">Hannah Kathleen Whisnant, Praneeth Vepakomma, Richard Younger, Ramesh Raskar (United States Military Academy at West Point, IDSS, TPP, MIT Lincoln Lab, MIT)</td>
+									<td class="rtd">Hannah Kathleen Whisnant, Praneeth Vepakomma, Ramesh Raskar (United States Military Academy at West Point, IDSS, TPP, MIT)</td>
+								   </tr>
+								   <tr class="rtr">
+									<td class="rtd">3:30 - 3:45 PM</td>
+									<td class="rtd">A preliminary assessment of federated ML for fraud detection.</td>
+									<td class="rtd">NTTData Italy- AI, IoT  & VR-Adriano Manfre, Claudia Lunini, Federico Ungolo, Riccardo Musmeci</td>
 								   </tr>
 								   <tr class="rtr">
 									<td class="rtd">4:15 - 5:00 PM</td>
