--- a/workshop.html
+++ b/workshop.html
@@ -246,6 +246,11 @@
 									<td class="rtd">NTTData Italy- AI, IoT  & VR-Adriano Manfre, Claudia Lunini, Federico Ungolo, Riccardo Musmeci</td>
 								   </tr>
 								   <tr class="rtr">
+									<td class="rtd">3:45 - 4:15 PM</td>
+									<td class="rtd">Hands-on training workshop-Code your SL-Module 3</td>
+									<td class="rtd">Abhishek Singh, Praneeth Vepakomma, Ayush Chopra (MIT)</td>
+								   </tr>
+								   <tr class="rtr">
 									<td class="rtd">4:15 - 5:00 PM</td>
 									<td class="rtd">Closing remarks & Discussion + Social</td>
 									<td class="rtd"> </td>
