update the main page

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 						<br>Praneeth Vepakomma, MIT
 						<br>Abhishek Singh, MIT
 						<br>Ayush Chopra, MIT
+						<br>Vivek Sharma, MIT and Harvard Medical School
 						<br>Otkrist Gupta, MIT Affiliate
 						<br>Vitor Pamplona, MIT Affiliate
 						<br>Kevin Pho, MIT
