--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
 				<div class="inner">
 					&copy; MIT Media Lab: Split Learning. All rights reserved.
 					<br>Design: <a href="http://html5up.net">HTML5 UP</a>
+          <br>Accessibility details located on <a href="accessibility.mit.edu">accessibility.mit.edu</a>
 				</div>
 			</footer>
 
